RESOLVED FIXED212030
[Win] Fix AppleWin build
https://bugs.webkit.org/show_bug.cgi?id=212030
Summary [Win] Fix AppleWin build
Per Arne Vollan
Reported 2020-05-18 10:07:38 PDT
Building WebCore fails with the following error: rendering/style/StyleRareInheritedData.cpp(74,1): error C2338: StyleRareInheritedData_should_bit_pack
Attachments
Patch (1.33 KB, patch)
2020-05-18 10:12 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2020-05-18 10:08:16 PDT
Per Arne Vollan
Comment 2 2020-05-18 10:12:32 PDT
Brent Fulgham
Comment 3 2020-05-18 11:19:53 PDT
Comment on attachment 399654 [details] Patch How could EWS not catch this? r=me!
Per Arne Vollan
Comment 4 2020-05-18 11:21:43 PDT
(In reply to Brent Fulgham from comment #3) > Comment on attachment 399654 [details] > Patch > > How could EWS not catch this? r=me! I am not sure, the EWS builders are fine without this change. There might be a difference in MSVC version. Thanks for reviewing!
EWS
Comment 5 2020-05-18 11:36:59 PDT
Committed r261823: <https://trac.webkit.org/changeset/261823> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399654 [details].
Note You need to log in before you can comment on or make changes to this bug.