[Win] Fix AppleWin build https://bugs.webkit.org/show_bug.cgi?id=212030

Reviewed by Brent Fulgham.

The build fails because the number of bitfields in GreaterThanOrSameSizeAsStyleRareInheritedData does not match the
actual number of bitfields in StyleRareInheritedData.

* rendering/style/StyleRareInheritedData.cpp:


Canonical link: https://commits.webkit.org/224914@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261823 268f45cc-cd09-0410-ab3c-d52691b4dbfc